Only thing left in My Projects section is to fix white space between borders of images

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,6 @@
 }
 
 body {
-    font-family:Arial, Helvetica, sans-serif;
     color: var(--dark-color);
     background-color: var(--light-color);
 }
@@ -161,14 +160,20 @@ header nav ul li a:hover {
     margin: 0 auto 0 auto;
     padding: 20px;
     text-align:center;
-    background-color: rgba (255, 255, 255, .8);
-    height:100%;
 }
 
-.my-work.title {
-    align-content: center;
+.wrapper h2 {
+    padding: 20px;
+    margin: 20px auto;
+    width: 70%;
+    background-color:rgba(20, 33, 61, .8);
+    border-left: 5px solid var(--yellow);
+    border-right: 5px solid var(--yellow);
+    color: var(--yellow);
+    justify-content: center;
+    font-size: 48px;
+    text-shadow:2px 2px 10px rgba(0, 0, 0, 0.8);
 }
-
 
 .main-img {
     width: 70%;
@@ -177,11 +182,12 @@ header nav ul li a:hover {
     flex:0;
     position:relative;
     box-shadow:  2px 10px 10px 5px black;
+    
 }
 
 .secondary-img {
     flex:0;
-    width: 34.8%;
+    width: 34.9%;
     border: 5px solid var(--yellow);
     max-height:400px;
     position:relative;
@@ -189,17 +195,10 @@ header nav ul li a:hover {
 
 }
 
-.bio-centered {
-    display: flex;
-    width: 80%;
-    padding: 20px;
-    margin: 50px auto 0 auto;
-    background-color:rgba(20, 33, 61, .8);
-    border-left: 5px solid var(--dark-yellow);
-    color: var(--light-color);
-    font-size: 20px;
+.example-work a {
+    padding: 0;
+    margin: 0;
 }
-
 
 
 .main-img:hover, .secondary-img:hover {
@@ -217,6 +216,18 @@ header nav ul li a:hover {
     }    
     .bio img {
         width: 100%;
+    }
+    .wrapper h2 {
+        width: 100%;
+    }
+    .main-img {
+        width: 100%;
+        height:250px;
+    }
+    .secondary-img
+    {
+        width: 100%;
+        height:250px;
     }
 }
 
